--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Push Docker Image
           command: |
             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker tag $IMAGE_NAME:mainline $IMAGE_NAME:$CIRCLE_SHA1
+#            docker tag $IMAGE_NAME:mainline $IMAGE_NAME:$CIRCLE_SHA1
             docker push $IMAGE_NAME:$CIRCLE_SHA1
       - run:
           name: Install envsubst
